[package]
name = "field-ref"
version = "0.1.1"
authors = ["yoh2 <yoh2.sdj@gmail.com>"]
repository = "https://github.com/yoh2/field-ref-rs"
description = "Field reference (like a member pointer to non-static data field in C++) for Rust￼"
categories = [ "data-structures" ]
license = "MIT"
readme = "README.md"

[dependencies]
